--- a/Sophmore-year.html
+++ b/Sophmore-year.html
@@ -55,9 +55,14 @@
         <div class="polaroid">
           <img src="Geometry.jpg" alt="Geometry" style="width:700px">
           <div class="container">
-          <p>I used to have geometry but I didn't like it because It was a lot of thinking
-            and solving for an = a1 * rn-1, which I find hard to solve because
-            I don't like math.
+          <p>I took Geometry last year and  explores topics such as area, perimeter, volume,
+             symmetry, congruence, and similarity. 
+             Geometric Formulas. s. Square: Perimeter: P = 4s. Area: 𝐴 = 𝑠2. ss. s. Rectangle: Perimeter: P = 2l + 2w. Area: A = lw. w. ...
+𝑑 Radius: r. = r.
+Circumference: C = d. C = 2 r. d. Area: 𝐴 = 𝜋𝑟2 *Use 3.14 as the approximate value of .
+Spring 2019. c. h. c.
+r. Sphere: Volume: 𝑉 = 𝜋𝑟
+Surface Area: 𝑆 = 4𝜋𝑟2. *Use 3.14 as the approximate value of .
         </p>
           </div>
         </div>
